# glycam-web

./: .gitignore  LoadingModal.html  Makefile.am  PointAndClickTool.html  README  README.md  about.jsp  autogen.sh  configure.ac  index.jsp  jmol.jsp
WEB-INF/: .gitignore  Makefile  README  urlrewrite.xml  web.xml
WEB-INF/classes/: logging.properties
WEB-INF/controller/: FileManager.java  GlobeData.java  HttpUtils.java  RegisterCoordinate.java  Utils.java
WEB-INF/controller/molecular_dynamics/: SolvationOptions.java
WEB-INF/controller/molecular_dynamics/glycoprotein_builder/: AttachGlycans.java  ChooseLocations.java  ChooseRotamers.java  DonePreprocessing.java  DownloadFiles.java  GlycanOptions.java  InputGlycan.java  SetAngles.java  UploadPdb.java  Utils.java
WEB-INF/controller/molecular_dynamics/oligosaccharide_builder/: BuildGlycan.java  BuildProgress.java  ChooseRotamers.java  DownloadFiles.java  Options.java  SetGlycosidicAngles.java
WEB-INF/controller/oligosaccharide_library/: Detail.java  OligosaccharideMenu.java  OligosaccharidePage.java
WEB-INF/controller/pdb_preprocessor/: CysBonds.java  HisMappings.java  Menu.java  MissingResidues.java  RemovedAtoms.java  TerminalResidues.java  UnrecognizedAtoms.java  UnrecognizedResidues.java  UploadPdb.java  Utils.java
WEB-INF/controller/services/: DrawGlycan.java
WEB-INF/docs/: Makefile  gems.js
WEB-INF/docs/template/: allclasses.tmpl  allfiles.tmpl  class.tmpl  index.tmpl
WEB-INF/docs/template/static/: default.css  header.html
WEB-INF/model/: .gitignore  Makefile.am  autogen.sh  configure.ac
WEB-INF/model/dat/: min.in
WEB-INF/model/src/cpp/: .gitignore  Makefile.am  build_glycoprotein.cc  get_linkages.cc  get_pdb_info.cc
WEB-INF/model/src/java/: .gitignore
WEB-INF/model/src/java/src/org/glycam/: FileUtils.java  GlycamSequence.java  Linkage.java  Logging.java  Utils.java
WEB-INF/model/src/java/src/org/glycam/molecular_dynamics/: SolvationSettings.java
WEB-INF/model/src/java/src/org/glycam/molecular_dynamics/glycan_builder/: GlycanSession.java  ResultStructure.java
WEB-INF/model/src/java/src/org/glycam/molecular_dynamics/glycoprotein_builder/: GlycosylationSiteList.java
WEB-INF/model/src/java/src/org/glycam/oligosaccharide_library/: Item.java
WEB-INF/model/src/java/src/org/glycam/pdb/preprocessing/: CysBondsSection.java  HisMapping.java  MissingResiduesSection.java  RemovedAtomsSection.java  UnrecognizedAtomsSection.java  UnrecognizedResidue.java  UnrecognizedResiduesSection.java
WEB-INF/model/src/proto/: BuildResultsPB.proto  PdbFilePB.proto
WEB-INF/tags/glycoprotein_builder/: glycosylation_locations.tag  glycosylation_rows.tag  header.tag
WEB-INF/view/tools/molecular_dynamics/: SolvationOptions.jsp
WEB-INF/view/tools/molecular_dynamics/glycoprotein_builder/: AttachGlycans.jsp  ChooseLocations.jsp  ChooseRotamers.jsp  DownloadFiles.jsp  GlycanOptions.jsp  InputGlycan.jsp  PdbOptions.jsp  SetAngles.jsp  UploadPdb.jsp
WEB-INF/view/tools/molecular_dynamics/oligosaccharide_builder/: BuildGlycan.jsp  ChooseRotamers.jsp  DownloadFiles.jsp  Options.jsp  SetGlycosidicAngles.jsp  WaitPage.jsp
WEB-INF/view/tools/pdb_preprocessor/: CysBonds.jsp  HisMappings.jsp  Menu.jsp  MissingResidues.jsp  RemovedAtoms.jsp  TerminalResidues.jsp  UnrecognizedAtoms.jsp  UnrecognizedResidues.jsp  UploadPdb.jsp
css/: nav.css  styles.css  subModal.css
dat/library_files/: all_amino94.lib
dat/param_files/: README  parm99.dat.mod
dat/prep_files/: ACE.prep  MEX.prep
inc/: footer.inc  head.inc  nav.inc
js/: PointAndClick.js  nav.js  subModal.js
oligosaccharide_library/: Detail.jsp  OligosaccharideLibrary.html  OligosaccharideMenu.jsp  OligosaccharidePage.jsp
src/cpp/: Makefile.am  build_glycoprotein.cc  build_torsions_mpi.cc  draw_glycan.cc  get_glycoprotein_info.cc  get_pdb_info.cc  get_pdb_preprocessing_info.cc  getlinkages.cc  validate_pdb.cc  validate_sequence.cc  validate_structure.cc
src/cpp/mpi/: Makefile.am  build_torsions_mpi.cc
src/cpp/proto/: BuildInfoPB.pb.cc  BuildInfoPB.pb.h  BuildResultsPB.pb.cc  BuildResultsPB.pb.h
src/java/: Makefile
src/java/cplusplus/: CPP.java
src/java/molecular_dynamics/: Linkage.java
src/java/molecular_dynamics/oligosaccharide_builder/: BuildInfoPB.java  BuildRequest.java  BuildResultsPB.java
src/java/src/configuration/: Configuration.java.in
src/java/src/cplusplus/: CPP.java
src/java/src/molecular_dynamics/: Linkage.java  LinkageValues.java  SolvationSettings.java
src/java/src/molecular_dynamics/oligosaccharide_builder/: BuildRequest.java  OligosaccharideSession.java  ResultStructure.java
src/java/src/oligosaccharide_library/: Item.java
src/java/src/org/glycam/: CPP.java  GlycamSequence.java  Linkage.java  LinkageValues.java  Logging.java  Sequence.java  Utils.java
src/java/src/org/glycam/configuration/: Configuration.java  Configuration.java.in
src/java/src/org/glycam/data/: DatabaseUtils.java
src/java/src/org/glycam/molecular_dynamics/: Linkage.java  LinkageValues.java  SolvationSettings.java
src/java/src/org/glycam/molecular_dynamics/glycan_builder/: BuildRequest.java  GlycanSession.java  ResultStructure.java
src/java/src/org/glycam/molecular_dynamics/glycoprotein_builder/: BuildRequest.java  GlycoproteinSession.java  GlycosylationSite.java  PdbInfoPB.java
src/java/src/org/glycam/molecular_dynamics/oligosaccharide_builder/: BuildInfoPB.java  BuildRequest.java  BuildResultsPB.java  OligosaccharideSession.java  ResultStructure.java
src/java/src/org/glycam/oligosaccharide_library/: Item.java
src/java/src/org/glycam/pdb/preprocessing/: HisMappingsSection.java  Menu.java  MenuItem.java  PreprocessingSection.java  PreprocessingSession.java  TerminalResiduesSection.java
src/proto/: BuildInfoPB.proto  BuildResultsPB.proto  PdbFilePB.proto  PdbInfoPB.proto
tools/: index.jsp
tools/molecular-dynamics/: index.jsp
visitors/: index.html
